Fixed styles on small screens

--- a/src/Components/Statistic/Statistic.module.css
+++ b/src/Components/Statistic/Statistic.module.css
@@ -98,7 +98,7 @@
   .statisticWrapper {
     padding: 0 5vw;
     flex-direction: column-reverse;
-    height: 70vh;
+    height: 75vh;
   }
   .leftBlock {
     height: 50%;
